[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipe"
version = "0.1.0"
description = "ROS2 to oneM2M Interworking Proxy Entity"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "acxrn"}]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "cerberus>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-requests",
]
notification = ["flask>=3.0"]

[project.scripts]
ipe = "ipe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "cerberus.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: requires running TinyIoT CSE",
    "e2e: requires PX4 SITL + Agent + TinyIoT",
]
